# imgraph

./: .editorconfig  .gitattributes  .gitignore  404.html  =24.2  LICENSE.txt  MANIFEST.in  README.md  custom_graph_config.json  docs_generator.py  index.html  mkdocs.yml  nav_gen.py  objects.inv  old_setup.py  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py  setup.py.bkp  test.py  test_imports.py
.github/workflows/: release.yml
api/: index.html
data/: index.html
datasets/: index.html
docs/: api.md  data.md  datasets.md  index.md  models.md  reader.md  utils.md  writer.md
docs/imgraph/data/: feature_extractor.md  legacy.md  make_graph.md  presets.md  transform_graph.md
docs/imgraph/data/edge_creation/: distance_edges.md  grid_edges.md  region_adjacency.md  similarity_edges.md
docs/imgraph/datasets/: image_folder.md  medmnist_dataset.md  mnist_dataset.md  pneumonia_dataset.md  standard.md  url_config.md
docs/imgraph/examples/: basic_graph_creation.md  comprehensive_graph_creation.md  training_image_folder_example.md  training_synthetic_example.md
docs/imgraph/models/: base.md  custom_gnn.md  gat.md  gcn.md  gin.md  sage.md
docs/imgraph/pipeline/: config_pipeline.md  folder_pipeline.md  from_dataset.md
docs/imgraph/reader/: read_directory.md  read_files.md
docs/imgraph/training/: trainer.md  utils.md
docs/imgraph/utils/: feature_size.md
docs/imgraph/visualization/: graph_plots.md
docs/imgraph/writer/: makedirs.md  write_files.md
imgraph/: __init__.py  home.py  logging.py  maintest.py  seed.py
imgraph/data/: __init__.py  feature_extractor.py  legacy.py  make_graph.py  presets.py  transform_graph.py
imgraph/data/edge_creation/: __init__.py  distance_edges.py  grid_edges.py  region_adjacency.py  similarity_edges.py
imgraph/data/edge_features/: __init__.py  boundary_features.py  feature_diff.py  geometric_features.py
imgraph/data/feature_extractor/: index.html
imgraph/data/legacy/: index.html
imgraph/data/make_graph/: index.html
imgraph/data/node_creation/: __init__.py  patch_nodes.py  pixel_nodes.py  superpixel_nodes.py
imgraph/data/node_features/: __init__.py  cnn_features.py  color_features.py  position_features.py  texture_features.py
imgraph/data/presets/: index.html
imgraph/data/transform_graph/: index.html
imgraph/dataloader/: __init__.py  train_test_loader.py
imgraph/datasets/: __init__.py  image_folder.py  medmnist_dataset.py  mnist_dataset.py  pneumonia_dataset.py  standard.py  url_config.py
imgraph/datasets/image_folder/: index.html
imgraph/datasets/medmnist_dataset/: index.html
imgraph/datasets/mnist_dataset/: index.html
imgraph/datasets/pneumonia_dataset/: index.html
imgraph/datasets/standard/: index.html
imgraph/datasets/url_config/: index.html
imgraph/examples/: basic_graph_creation.py  comprehensive_graph_creation.py  training_custom_gnn_examples.py  training_image_folder_example.py  training_synthetic_example.py
imgraph/examples/basic_graph_creation/: index.html
imgraph/examples/comprehensive_graph_creation/: index.html
imgraph/examples/training_image_folder_example/: index.html
imgraph/examples/training_synthetic_example/: index.html
imgraph/models/: __init__.py  base.py  custom_gnn.py  gat.py  gcn.py  gin.py  sage.py
imgraph/models/base/: index.html
imgraph/models/custom_gnn/: index.html
imgraph/models/gat/: index.html
imgraph/models/gcn/: index.html
imgraph/models/gin/: index.html
imgraph/models/sage/: index.html
imgraph/pipeline/: __init__.py  config_pipeline.py  folder_pipeline.py  from_dataset.py
imgraph/pipeline/config_pipeline/: index.html
imgraph/pipeline/folder_pipeline/: index.html
imgraph/pipeline/from_dataset/: index.html
imgraph/reader/: __init__.py  read_directory.py  read_files.py
imgraph/reader/read_directory/: index.html
imgraph/reader/read_files/: index.html
imgraph/training/: __init__.py  trainer.py  utils.py
imgraph/training/trainer/: index.html
imgraph/training/utils/: index.html
imgraph/utils/: __init__.py  feature_size.py
imgraph/utils/feature_size/: index.html
imgraph/visualization/: __init__.py  graph_plots.py
imgraph/visualization/graph_plots/: index.html
imgraph/writer/: __init__.py  makedirs.py  write_files.py
imgraph/writer/makedirs/: index.html
imgraph/writer/write_files/: index.html
models/: index.html
output/: graph_config.json
pipeline/: index.html
reader/: index.html
results/: classification_report.txt  gcn_model.pt
results_custom/: classification_report.txt  custom_gcn_model.pt  custom_mix_model.pt
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/data/: index.html
site/pipeline/: index.html
site/reader/: index.html
site/search/: search_index.json
site/writer/: index.html
src/: feature_extraction.py  imgraph.py
src/imgraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: index.html
writer/: index.html
(+24 files in other folders)
