[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgraph"
version = "0.1.4"
description = "Graph Neural Network Library Built On Top Of PyTorch and PyTorch Geometric"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE.txt"] 
authors = [
  { name = "Aryan Singh", email = "aryan.singh@ul.ie" }
]
keywords = [
  "deep-learning",
  "pytorch",
  "geometric-deep-learning",
  "graph-neural-networks",
  "graph-convolutional-networks",
  "gnn-on-images",
  "convert image to graph"
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://aryan-at-ul.github.io"
documentation = "https://aryan-at-ul.github.io"
repository = "https://github.com/aryan-at-ul/imgraph.git"

[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
blank_line_before_nested_class_or_def = false

[tool.pyright]
include = ["imgraph/utils/*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitignore", "__init__.py"]

[tool.pytest.ini_options]
addopts = "--capture=no"
filterwarnings = [
  "ignore:distutils:DeprecationWarning",
  "ignore:'torch_geometric.contrib' contains experimental code:UserWarning",
  "ignore:The PyTorch API of nested tensors is in prototype stage:UserWarning",
  "ignore:scatter_reduce():UserWarning",
  "ignore:Sparse CSR tensor support is in beta state:UserWarning",
  "ignore:Setting backward hooks on ReLU activations:UserWarning",
  "ignore:.*did not already require gradients, required_grads has been set automatically:UserWarning"
]

[tool.pylint.messages_control]
disable = [
  "import-outside-toplevel",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "empty-docstring",
  "import-error",
  "too-many-arguments",
  "arguments-differ",
  "invalid-name",
  "redefined-builtin"
]
attr-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
argument-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
variable-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
generated-members = ["torch.*"]

[tool.coverage.run]
source = ["imgraph"]
omit = [
  "imgraph/__init__.py",
  "imgraph/utils/__init__.py"
]
